fix(location-bar): increase line-height for unselectable-node
- set proper line-height for unselectable-node in location-bar-node (should be > font-size)
- to avoid the text being cut off at top for certain Browser View Zoom settings (like 75% or 80%)

Close: #1879

--- a/src/clr-addons/location-bar/location-bar-node/location-bar-node.component.scss
+++ b/src/clr-addons/location-bar/location-bar-node/location-bar-node.component.scss
@@ -13,7 +13,7 @@
 
     .unselectable-node {
       display: inline-block;
-      line-height: 0.35rem;
+      line-height: 0.45rem;
       padding: 0 0.5rem;
       text-transform: uppercase;
       font-size: 0.4rem;
